--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,4 +6,5 @@ build_script:
 - curl -O https://buildroot.org/downloads/buildroot-2018.02.4.tar.gz
 - tar -zxf buildroot-2018.02.4.tar.gz
 - cd buildroot-2018.02.4
-- ../make.pc_x86_64_bios_defconfig.sh
+#- ../make.pc_x86_64_bios_defconfig.sh
+- ../make.qemu_x86.sh
