make images.tar.gz

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,3 +8,7 @@ build_script:
 - cd buildroot-2018.02.4
 #- ../make.pc_x86_64_bios_defconfig.sh
 - ../make.qemu_x86_defconfig.sh
+- tar -czvf ../images.tar.gz output/images
+
+artifacts:
+- path: images.tar.gz
