--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,9 +6,10 @@ build_script:
 - curl -O https://buildroot.org/downloads/buildroot-2018.02.4.tar.gz
 - tar -zxf buildroot-2018.02.4.tar.gz
 - cd buildroot-2018.02.4
-#- ../make.pc_x86_64_bios_defconfig.sh
 - ../make.qemu_x86_defconfig.sh
-- tar -czvf ../images.tar.gz output/images
+- ls -lh output/images/
+
 
 artifacts:
-- path: images.tar.gz
+- path: buildroot-2018.02.4/output/images/bzImage
+- path: buildroot-2018.02.4/output/images/rootfs.ext2
